--- a/.github/workflows/ha-config-check.yaml
+++ b/.github/workflows/ha-config-check.yaml
@@ -16,6 +16,8 @@ jobs:
   yaml-lint:
     name: YAML Lint
     runs-on: arc-runner-set
+    # Run on PRs and pushes to main
+    if: github.event_name == 'pull_request' || (github.event_name == 'push' && github.ref == 'refs/heads/main')
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -32,6 +34,8 @@ jobs:
     name: Home Assistant Configuration Check
     runs-on: arc-runner-set
     needs: yaml-lint
+    # Run on PRs and pushes to main
+    if: github.event_name == 'pull_request' || (github.event_name == 'push' && github.ref == 'refs/heads/main')
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
