fix: configure ARC to use correct secret name and ignore CRD differences
- Set global secret name to github-app-arc-token
- Remove individual auth secret configurations
- Add ignoreDifferences for preserveUnknownFields in CRDs
- Fixes 'controller-manager' secret not found error

--- a/gitops/infra/arc/values.yaml
+++ b/gitops/infra/arc/values.yaml
@@ -10,6 +10,10 @@ githubConfigUrl: "https://github.com/amerenda"
 # Install CRDs automatically
 installCRDs: true
 
+# Global secret configuration
+secret:
+  name: github-app-arc-token
+
 # Controller configuration
 controller:
   enabled: true
@@ -74,20 +78,6 @@ controller:
 
   # Extra environment variables
   extraEnv: []
-
-  # GitHub authentication
-  authSecret:
-    enabled: true
-    secretName: github-app-arc-token
-    key: github_app_id
-  authSecretInstallationID:
-    enabled: true
-    secretName: github-app-arc-token
-    key: github_app_installation_id
-  authSecretPrivateKey:
-    enabled: true
-    secretName: github-app-arc-token
-    key: github_app_private_key
 
   # Pod disruption budget
   podDisruptionBudget:
