--- a/gitops/root-app.yaml
+++ b/gitops/root-app.yaml
@@ -596,13 +596,13 @@ spec:
       targetRevision: 0.23.7
       helm:
         valueFiles:
-          - $values/gitops/infra/arc/values.yaml
+          - $values/gitops/infra/arc-controller/values.yaml
     - repoURL: https://github.com/amerenda/amerenda-k3s.git
       targetRevision: main
       ref: values
     - repoURL: https://github.com/amerenda/amerenda-k3s.git
       targetRevision: main
-      path: gitops/infra/arc
+      path: gitops/infra/arc-controller
   destination:
     server: https://kubernetes.default.svc
     namespace: arc-systems
@@ -645,7 +645,7 @@ spec:
       targetRevision: 0.23.7
       helm:
         valueFiles:
-          - $values/gitops/infra/arc/runner-scale-set-values.yaml
+          - $values/gitops/infra/arc-runners/values.yaml
     - repoURL: https://github.com/amerenda/amerenda-k3s.git
       targetRevision: main
       ref: values
