fix: create controller-manager secret for ARC
- Add ExternalSecret for controller-manager secret (ARC expects this name)
- Uses same Bitwarden credentials as github-app-arc-token
- Fixes 'controller-manager secret not found' error
- ARC chart hardcodes secret name 'controller-manager'

--- a/gitops/infra/arc-controller/values.yaml
+++ b/gitops/infra/arc-controller/values.yaml
@@ -10,9 +10,7 @@ githubConfigUrl: "https://github.com/amerenda"
 # Install CRDs automatically
 installCRDs: true
 
-# Global secret configuration
-secret:
-  name: github-app-arc-token
+# GitHub authentication - ARC expects secret named 'controller-manager'
 
 # Controller configuration
 controller:
