--- a/gitops/root-app.yaml
+++ b/gitops/root-app.yaml
@@ -625,6 +625,19 @@ spec:
     kind: CustomResourceDefinition
     jsonPointers:
     - /spec/preserveUnknownFields
+  - group: "external-secrets.io"
+    kind: ExternalSecret
+    name: controller-manager
+    jsonPointers:
+    - /spec/data/0/remoteRef/conversionStrategy
+    - /spec/data/0/remoteRef/decodingStrategy
+    - /spec/data/0/remoteRef/metadataPolicy
+    - /spec/data/1/remoteRef/conversionStrategy
+    - /spec/data/1/remoteRef/decodingStrategy
+    - /spec/data/1/remoteRef/metadataPolicy
+    - /spec/data/2/remoteRef/conversionStrategy
+    - /spec/data/2/remoteRef/decodingStrategy
+    - /spec/data/2/remoteRef/metadataPolicy
 
 ---
 # Infrastructure: GitHub Actions Runner Scale Set
