--- a/gitops/infra/arc-controller/externalsecret.yaml
+++ b/gitops/infra/arc-controller/externalsecret.yaml
@@ -1,7 +1,7 @@
 apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
-  name: github-app-arc-token
+  name: controller-manager
   namespace: arc-systems
   annotations:
     argocd.argoproj.io/sync-wave: "0"
@@ -11,7 +11,7 @@ spec:
     name: bitwarden-secretstore
     kind: ClusterSecretStore
   target:
-    name: github-app-arc-token
+    name: controller-manager
     creationPolicy: Owner
   data:
   - secretKey: github_app_id
