fix: deploy RunnerSet CRD directly instead of Helm chart for arc-runners
- Change arc-runners application to deploy YAML files instead of Helm chart
- Add RunnerSet CRD resource with correct labels (arc-runner-set)
- RunnerSet configured for autoscaling (0-10 replicas)
- Uses controller-manager secret for GitHub authentication
- Fixes 'Waiting for a runner to pick up this job' issue

--- a/gitops/root-app.yaml
+++ b/gitops/root-app.yaml
@@ -652,16 +652,10 @@ metadata:
     - resources-finalizer.argocd.argoproj.io/background
 spec:
   project: default
-  sources:
-    - repoURL: https://actions-runner-controller.github.io/actions-runner-controller
-      chart: actions-runner-controller
-      targetRevision: 0.23.7
-      helm:
-        valueFiles:
-          - $values/gitops/infra/arc-runners/values.yaml
-    - repoURL: https://github.com/amerenda/amerenda-k3s.git
-      targetRevision: main
-      ref: values
+  source:
+    repoURL: https://github.com/amerenda/amerenda-k3s.git
+    targetRevision: main
+    path: gitops/infra/arc-runners
   destination:
     server: https://kubernetes.default.svc
     namespace: arc-systems
