feat: cleans up home-assistant configs

--- a/.github/workflows/ha-config-check.yaml
+++ b/.github/workflows/ha-config-check.yaml
@@ -53,11 +53,10 @@ jobs:
           mkdir -p /tmp/ha-config
           
           # Copy HA source files to config directory
-          cp -r gitops/apps/home-assistant/automations/* /tmp/ha-config/ 2>/dev/null || true
-          cp -r gitops/apps/home-assistant/blueprints/* /tmp/ha-config/ 2>/dev/null || true
-          cp -r gitops/apps/home-assistant/packages/* /tmp/ha-config/ 2>/dev/null || true
-          cp -r gitops/apps/home-assistant/scripts/* /tmp/ha-config/ 2>/dev/null || true
-          cp -r gitops/apps/home-assistant/dashboards/* /tmp/ha-config/ 2>/dev/null || true
+          cp -r gitops/apps/home-assistant/configuration/automations/* /tmp/ha-config/ 2>/dev/null || true
+          cp -r gitops/apps/home-assistant/configuration/blueprints/* /tmp/ha-config/ 2>/dev/null || true
+          cp -r gitops/apps/home-assistant/configuration/scripts/* /tmp/ha-config/ 2>/dev/null || true
+          cp -r gitops/apps/home-assistant/configuration/dashboards/* /tmp/ha-config/ 2>/dev/null || true
           
           # Create basic configuration.yaml
           cat > /tmp/ha-config/configuration.yaml << 'EOF'
@@ -78,7 +77,7 @@ jobs:
           input_number:   !include_dir_merge_named helpers/input_number/
           input_text:     !include_dir_merge_named helpers/input_text/
           
-          # Packages
+          # Packages (helpers renamed from packages)
           homeassistant:
             packages: !include_dir_named packages
           EOF
@@ -96,11 +95,17 @@ jobs:
           mkdir -p /tmp/ha-config/helpers/input_text
           mkdir -p /tmp/ha-config/packages
           
-          # Copy helper files
-          find gitops/apps/home-assistant/packages/helpers/generated -name "*.yaml" -exec cp {} /tmp/ha-config/helpers/ \;
+          # Copy helper files from generated directory
+          if [ -d "gitops/apps/home-assistant/configuration/helpers/generated" ]; then
+            find gitops/apps/home-assistant/configuration/helpers/generated/input_boolean -name "*.yaml" -exec cp {} /tmp/ha-config/helpers/input_boolean/ \; 2>/dev/null || true
+            find gitops/apps/home-assistant/configuration/helpers/generated/input_datetime -name "*.yaml" -exec cp {} /tmp/ha-config/helpers/input_datetime/ \; 2>/dev/null || true
+            find gitops/apps/home-assistant/configuration/helpers/generated/input_select -name "*.yaml" -exec cp {} /tmp/ha-config/helpers/input_select/ \; 2>/dev/null || true
+            find gitops/apps/home-assistant/configuration/helpers/generated/input_number -name "*.yaml" -exec cp {} /tmp/ha-config/helpers/input_number/ \; 2>/dev/null || true
+            find gitops/apps/home-assistant/configuration/helpers/generated/input_text -name "*.yaml" -exec cp {} /tmp/ha-config/helpers/input_text/ \; 2>/dev/null || true
+          fi
           
-          # Copy package files
-          find gitops/apps/home-assistant/packages -name "*.yaml" -not -path "*/generated/*" -exec cp {} /tmp/ha-config/packages/ \;
+          # Copy package files (if any exist in helpers directory)
+          find gitops/apps/home-assistant/configuration/helpers -name "*.yaml" -not -path "*/generated/*" -not -path "*/input_text/*" -not -name "*_template.yaml.j2" -exec cp {} /tmp/ha-config/packages/ \; 2>/dev/null || true
 
       - name: Run Home Assistant configuration check
         run: |
