feat: add autoscaling with min 1 max 3 runners
- Add HorizontalRunnerAutoscaler with minReplicas: 1, maxReplicas: 3
- Create ServiceAccount and RBAC for runner pods
- Configure autoscaling based on queued workflow jobs
- HRA will manage RunnerSet replicas automatically
- Ensures at least 1 runner is always available

--- a/gitops/infra/arc-runners/runnerset.yaml
+++ b/gitops/infra/arc-runners/runnerset.yaml
@@ -25,8 +25,8 @@ spec:
   dockerdWithinRunnerContainer: true
   dockerEnabled: true
   
-  # Replica configuration - start with 0, scale up on demand
-  replicas: 0
+  # Replica configuration - HRA will manage this (set initial to match minReplicas)
+  replicas: 1
   
   # Service name (required)
   serviceName: arc-runner-set
