fix: ignore scaleUpTriggers differences in HorizontalRunnerAutoscaler
- Add ignore difference for workflowJob structure normalization
- Prevents ArgoCD sync conflicts with nested workflowJob object
- Fixes constant out-of-sync state for arc-runners autoscaler

--- a/gitops/root-app.yaml
+++ b/gitops/root-app.yaml
@@ -677,3 +677,7 @@ spec:
     kind: CustomResourceDefinition
     jsonPointers:
     - /spec/preserveUnknownFields
+  - group: "actions.summerwind.dev"
+    kind: HorizontalRunnerAutoscaler
+    jsonPointers:
+    - /spec/scaleUpTriggers
