fix: switch RunnerSet from organization to repository-level
- Change from organization: amerenda to repository: amerenda/amerenda-k3s
- Repository-level runners more reliable and require fewer permissions
- Fixes 404 error when creating organization registration tokens
- All workflows in this repo will use these runners

--- a/gitops/infra/arc-runners/runnerset.yaml
+++ b/gitops/infra/arc-runners/runnerset.yaml
@@ -6,8 +6,8 @@ metadata:
   annotations:
     argocd.argoproj.io/sync-wave: "5"
 spec:
-  # GitHub configuration - organization-wide
-  organization: amerenda
+  # GitHub configuration - repository-level (more reliable than org-level)
+  repository: amerenda/amerenda-k3s
   githubAPICredentialsFrom:
     secretRef:
       name: controller-manager
