fix: switch back to organization-level runners + add troubleshooting
- Change RunnerSet back to organization: amerenda
- Add troubleshooting guide for 404 registration token errors
- Document required GitHub App permissions:
  - Organization administration: Read-only (for org-level tokens)
- Update README with correct permission requirements

--- a/gitops/infra/arc-runners/runnerset.yaml
+++ b/gitops/infra/arc-runners/runnerset.yaml
@@ -6,8 +6,8 @@ metadata:
   annotations:
     argocd.argoproj.io/sync-wave: "5"
 spec:
-  # GitHub configuration - repository-level (more reliable than org-level)
-  repository: amerenda/amerenda-k3s
+  # GitHub configuration - organization-wide
+  organization: amerenda
   githubAPICredentialsFrom:
     secretRef:
       name: controller-manager
