fix: use repository-level runners for personal GitHub account
- Change RunnerSet from organization to repository: amerenda/amerenda-k3s
- Personal GitHub accounts cannot use organization-level runners
- Update documentation to clarify personal vs organization account differences
- Fixes 404 error for personal account users

--- a/gitops/infra/arc-runners/runnerset.yaml
+++ b/gitops/infra/arc-runners/runnerset.yaml
@@ -6,8 +6,9 @@ metadata:
   annotations:
     argocd.argoproj.io/sync-wave: "5"
 spec:
-  # GitHub configuration - organization-wide
-  organization: amerenda
+  # GitHub configuration - repository-level (required for personal accounts)
+  # Personal GitHub accounts cannot use organization-level runners
+  repository: amerenda/amerenda-k3s
   githubAPICredentialsFrom:
     secretRef:
       name: controller-manager
