fix: enable ephemeral runners to prevent recreate loop
- Set ephemeral: true so runners exit after completing jobs
- Set replicas: 0 initially, let HRA manage scaling
- Prevents infinite loop of completing/recreating pods
- HRA will scale up to minReplicas: 1 when jobs are queued

--- a/gitops/infra/arc-runners/runnerset.yaml
+++ b/gitops/infra/arc-runners/runnerset.yaml
@@ -26,8 +26,12 @@ spec:
   dockerdWithinRunnerContainer: true
   dockerEnabled: true
   
-  # Replica configuration - HRA will manage this (set initial to match minReplicas)
-  replicas: 1
+  # Ephemeral runners - exit after completing jobs, HRA will scale up based on demand
+  ephemeral: true
+  
+  # Replica configuration - HRA will manage this
+  # Set to 0 initially, HRA will scale up to minReplicas when needed
+  replicas: 0
   
   # Service name (required)
   serviceName: arc-runner-set
