fix: add repositoryNames to HRA metrics for repository-level runners
- Add repositoryNames field to metrics (required for repo-level runners)
- Fixes 'repositoryNames is required' validation error
- Allows HRA to properly detect queued jobs for scaling

--- a/gitops/infra/arc-runners/horizontalrunnerautoscaler.yaml
+++ b/gitops/infra/arc-runners/horizontalrunnerautoscaler.yaml
@@ -25,6 +25,8 @@ spec:
   # Metrics-based autoscaling (scale based on queued jobs)
   metrics:
   - type: TotalNumberOfQueuedAndInProgressWorkflowRuns
+    repositoryNames:
+      - amerenda-k3s  # Required for repository-level runners
     scaleUpThreshold: "1.0"
     scaleUpAdjustment: 1
     scaleDownThreshold: "0.0"
