fix: add GitHub API credentials to HRA for authentication
- Add githubAPICredentialsFrom to HRA spec
- HRA needs GitHub App credentials to query workflow runs
- Fixes 401 Bad credentials error when listing queued jobs
- Required for HRA to detect when to scale up runners

--- a/gitops/infra/arc-runners/horizontalrunnerautoscaler.yaml
+++ b/gitops/infra/arc-runners/horizontalrunnerautoscaler.yaml
@@ -11,6 +11,11 @@ spec:
     kind: RunnerSet
     name: arc-runner-set
   
+  # GitHub API credentials (required for HRA to query workflow runs)
+  githubAPICredentialsFrom:
+    secretRef:
+      name: controller-manager
+  
   # Autoscaling configuration
   minReplicas: 1
   maxReplicas: 3
