--- a/gitops/root-app.yaml
+++ b/gitops/root-app.yaml
@@ -652,18 +652,28 @@ metadata:
     - resources-finalizer.argocd.argoproj.io/background
 spec:
   project: default
-  source:
-    repoURL: https://github.com/amerenda/amerenda-k3s.git
-    targetRevision: main
-    path: gitops/infra/arc-runners
+  sources:
+    - repoURL: oci://ghcr.io/actions/actions-runner-controller-charts
+      chart: gha-runner-scale-set
+      targetRevision: latest
+      helm:
+        valueFiles:
+          - $values/gitops/infra/arc-runners/values.yaml
+    - repoURL: https://github.com/amerenda/amerenda-k3s.git
+      targetRevision: main
+      ref: values
+    - repoURL: https://github.com/amerenda/amerenda-k3s.git
+      targetRevision: main
+      path: gitops/infra/arc-runners
   destination:
     server: https://kubernetes.default.svc
-    namespace: arc-systems
+    namespace: arc-runners
   syncPolicy:
     automated:
       prune: true
       selfHeal: true
     syncOptions:
+      - CreateNamespace=true
       - PrunePropagationPolicy=foreground
       - ServerSideApply=true
     retry:
