fix: pin gha-runner-scale-set chart version to 0.4.2
- Change targetRevision from 'latest' to '0.4.2' for OCI chart
- 'latest' tag not supported by ArgoCD for OCI registry
- Uses stable version matching official documentation

--- a/gitops/root-app.yaml
+++ b/gitops/root-app.yaml
@@ -655,7 +655,7 @@ spec:
   sources:
     - repoURL: oci://ghcr.io/actions/actions-runner-controller-charts
       chart: gha-runner-scale-set
-      targetRevision: latest
+      targetRevision: 0.4.2
       helm:
         valueFiles:
           - $values/gitops/infra/arc-runners/values.yaml
