--- a/gitops/root-app.yaml
+++ b/gitops/root-app.yaml
@@ -653,7 +653,7 @@ metadata:
 spec:
   project: default
   sources:
-    - repoURL: oci://ghcr.io/actions/actions-runner-controller-charts
+    - repoURL: https://actions-runner-controller.github.io/actions-runner-controller
       chart: gha-runner-scale-set
       targetRevision: 0.23.7
       helm:
