fix: use gha-runner-scale-set chart version 0.4.0
- Change targetRevision from 0.13.0 to 0.4.0
- Matches version shown in official GitHub documentation examples
- Resolves 403 access denied error from OCI registry

--- a/gitops/infra/arc-runners/argocd-repo-secret.yaml
+++ b/gitops/infra/arc-runners/argocd-repo-secret.yaml
@@ -9,8 +9,9 @@ type: Opaque
 stringData:
   type: helm
   url: oci://ghcr.io/actions/actions-runner-controller-charts
-  # For public OCI registries, username and password can be empty
-  # ArgoCD will use anonymous access for public registries
+  enableOCI: "true"
+  # For ghcr.io public registries, use GitHub username and PAT with read:packages scope
+  # Or leave empty for anonymous access (may still require auth for some endpoints)
   username: ""
   password: ""
 
