fix: use path instead of chart field for OCI helm chart
- Change from 'chart' field to 'path: .' to match ArgoCD OCI example format
- Include full chart path in repoURL: oci://ghcr.io/actions/actions-runner-controller-charts/gha-runner-scale-set
- Matches ArgoCD documentation pattern for OCI registry sources

--- a/gitops/root-app.yaml
+++ b/gitops/root-app.yaml
@@ -653,8 +653,8 @@ metadata:
 spec:
   project: default
   sources:
-    - repoURL: oci://ghcr.io/actions/actions-runner-controller-charts
-      chart: gha-runner-scale-set
+    - repoURL: oci://ghcr.io/actions/actions-runner-controller-charts/gha-runner-scale-set
+      path: .
       targetRevision: 0.4.0
       helm:
         valueFiles:
