--- a/gitops/root-app.yaml
+++ b/gitops/root-app.yaml
@@ -591,9 +591,9 @@ metadata:
 spec:
   project: default
   sources:
-    - repoURL: https://actions-runner-controller.github.io/actions-runner-controller
-      chart: actions-runner-controller
-      targetRevision: 0.23.7
+    - repoURL: oci://ghcr.io/actions/actions-runner-controller-charts/gha-runner-scale-set-controller
+      path: .
+      targetRevision: 0.4.0
       helm:
         valueFiles:
           - $values/gitops/infra/arc-controller/values.yaml
