--- a/gitops/infra/arc-runners/argocd-repo-secret.yaml
+++ b/gitops/infra/arc-runners/argocd-repo-secret.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: ghcr-actions-runner-controller-charts
-  namespace: argocd
+  namespace: default
   labels:
     argocd.argoproj.io/secret-type: repository
 type: Opaque
