--- a/gitops/infra/arc-controller/rbac-patch.yaml
+++ b/gitops/infra/arc-controller/rbac-patch.yaml
@@ -31,6 +31,7 @@ rules:
   - rolebindings
   verbs:
   - create
+  - delete
   - patch
   - update
 - apiGroups:
@@ -39,6 +40,7 @@ rules:
   - roles
   verbs:
   - create
+  - delete
   - patch
   - update
 ---
