--- a/gitops/infra/arc-runners/values.yaml
+++ b/gitops/infra/arc-runners/values.yaml
@@ -58,19 +58,10 @@ template:
     # Security context for runner pods
     # Note: Init containers need root access for volume setup
     # The chart will set appropriate security contexts for dind containers
+    # We only set fsGroup to ensure volumes have correct permissions
+    # Init containers will run as root (default), runner container will inherit from chart defaults
     securityContext:
       fsGroup: 1000
-      # Allow init containers to run as root, but runner containers as non-root
-      # runAsNonRoot: true  # Commented out to allow init containers to work
-      # runAsUser: 1000  # Commented out - let init containers run as root
-      # runAsGroup: 1000
-    # Set security context specifically on runner container
-    containers:
-      - name: runner
-        securityContext:
-          runAsNonRoot: true
-          runAsUser: 1000
-          runAsGroup: 1000
 
 # Namespace override
 namespaceOverride: arc-runners
