fix: ignore AutoscalingRunnerSet status fields for ArgoCD health
- ArgoCD shows Progressing due to pendingEphemeralRunners status
- These status fields change dynamically and shouldn't affect sync status
- Add ignoreDifferences for pendingEphemeralRunners and currentRunners
- Allows ArgoCD to properly assess health without status fluctuations

--- a/gitops/root-app.yaml
+++ b/gitops/root-app.yaml
@@ -704,3 +704,8 @@ spec:
     kind: HorizontalRunnerAutoscaler
     jsonPointers:
     - /spec/scaleUpTriggers
+  - group: "actions.github.com"
+    kind: AutoscalingRunnerSet
+    jsonPointers:
+    - /status/pendingEphemeralRunners
+    - /status/currentRunners
