fix: use scale set name directly in runs-on
- For runner scale sets, use just the scale set name
- Change from [self-hosted, linux, arc-runner-set] to arc-runner-set
- Matches the runnerScaleSetName configuration

--- a/.github/workflows/ha-config-check.yaml
+++ b/.github/workflows/ha-config-check.yaml
@@ -15,7 +15,7 @@ on:
 jobs:
   yaml-lint:
     name: YAML Lint
-    runs-on: [self-hosted, linux, arc-runner-set]
+    runs-on: arc-runner-set
     # Run on PRs and pushes to main
     if: github.event_name == 'pull_request' || (github.event_name == 'push' && github.ref == 'refs/heads/main')
     steps:
@@ -32,7 +32,7 @@ jobs:
 
   ha-config-check:
     name: Home Assistant Configuration Check
-    runs-on: [self-hosted, linux, arc-runner-set]
+    runs-on: arc-runner-set
     needs: yaml-lint
     # Run on PRs and pushes to main
     if: github.event_name == 'pull_request' || (github.event_name == 'push' && github.ref == 'refs/heads/main')
